init: Initialize Spring project